exome-results-browsers/demo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exome-results-browsers-ingress
  annotations:
    kubernetes.io/ingress.demo-static-ip-name: demo-exome-results-browsers-ip
  labels:
    service: exome-results-browsers
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: exome-results-browsers
                port:
                  number: 80
            pathType: ImplementationSpecific
